Finish test build setup